force-app/main/default/objects/Salary__c/Salary__c.object-meta.xml
<CustomObject>
    <description>The object contains the all the records of the salaries</description>
    <label>Salary</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>