force-app/main/default/objects/Salary__c/fields/Credited_To__c.field-meta.xml
<CustomField>
    <fullName>Credited_To__c</fullName>
    <label>Credited To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>SALARIES</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>