force-app/main/default/objects/Salary__c/fields/PF_Deduction__c.field-meta.xml
<CustomField>
    <fullName>PF_Deduction__c</fullName>
    <label>PF Deduction</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>