force-app/main/default/objects/Salary__c/fields/Special_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Special_Allowance__c</fullName>
    <label>Special Allowance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>