force-app/main/default/objects/Salary__c/validationRules/bank_details_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>bank_details_cannot_be_null</fullName>
    <active>true</active>
    <description>The bank account.</description>
    <errorConditionFormula>ISBLANK( Bank_Details__c )</errorConditionFormula>
    <errorMessage>Your bank detaila cannot be null.</errorMessage>
</ValidationRule>