force-app/main/default/objects/Salary__c/validationRules/restrict_creation_of_salary_for_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>restrict_creation_of_salary_for_inactive</fullName>
    <active>true</active>
    <description>It restricts the creation of salary record for the inactive employees.</description>
    <errorConditionFormula>NOT( Credited_To__r.Is_Active__c )</errorConditionFormula>
    <errorMessage>Salary Cannot be processed for Inactive members.</errorMessage>
</ValidationRule>