force-app/main/default/objects/Salary__c/validationRules/restrict_updation_of_bank_account_number.validationRule-meta.xml
<ValidationRule>
    <fullName>restrict_updation_of_bank_account_number</fullName>
    <active>true</active>
    <description>Updating of bank account number is restricted.</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
 ISCHANGED( Bank_Account_Number__c ) 
)</errorConditionFormula>
    <errorMessage>You cannot change the bank account number once it is been set.</errorMessage>
</ValidationRule>